# gOTzilla

./: CMakeLists.txt  README.md  constants.h  good_index.cpp  good_index.h  good_index_client.cpp  gotzilla.cpp  install.sh  pir_server.cpp  polynomial.hpp  share_at.cpp  share_at.h  verifier_state.cpp  verifier_state.h
